--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('../../img/fondo.webp');
+    background-image: url('../../assets/img/fondo.webp');
     background-size: cover;
 }
 
